--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,14 @@
 /* CUSTOM PROPS */
 :root{
     --text-color: #333;
+    --accent-color-green: #0a775f;
+    --accent-color-green-80: rgba(10, 119, 95, 0.8);
+    --accent-color-green-60: rgb(10, 119, 95, 0.6);
+    --accent-color-light-brown: rgb(201, 155, 103);
+    --accent-color-light-brown-80: rgb(201, 155, 103, 0.8);
+    --accent-color-light-brown-60: rgba(201, 155, 103, 0.6);
+    --light-brown: #f3d7b7;
+    --outline-color:var(--accent-color-green);
 }
 
 /* FONTS */
@@ -54,7 +62,7 @@ body{
     height: 100%;               /*sticky footer qilish uchun*/
     font-family: "Roboto", "Arial", sans-serif;
     font-size: 16px;
-    line-height: 1.5;
+    line-height: 1.75;
     background-color: #fff;
     color: var(--text-color);
 }
@@ -62,12 +70,166 @@ img{
     max-width: 100%;
     height: auto;
 }
+*:focus{
+    outline: 2px dashed var(--outline-color);
+    outline-offset: 3px;
+}
 /* CONTAINER */
 .container{
     width: 100%;
     max-width: 1440px;
-    padding-left: 50px;
-    padding-right: 50px;
+    padding-left: 20px;
+    padding-right: 20px;
     margin-right: auto;
     margin-left: auto;
+}
+/* BUTTON */
+.button {
+    display: inline-block;
+    padding: 16px 24px;
+    border: none;
+    border-radius: 100px;
+    font-size: 16px;
+    line-height: normal;
+    font-weight: 500;
+    color: #fff;
+    cursor: pointer;
+    text-transform: uppercase;
+    letter-spacing: 1px;
+    white-space: nowrap ;
+}
+.button-green {
+    background-color: var(--accent-color-green);
+    color: #fff;
+}
+.button-green:hover{
+    background-color: var(--accent-color-green-80);
+}
+.button-green:active{
+    background-color: var(--accent-color-green-60);
+}
+
+.button-brown {
+    background-color: var(--accent-color-light-brown);
+    color: #fff;
+}
+.button-brown:hover{
+    background-color: var(--accent-color-light-brown-80);
+}
+.button-brown:active{
+    background-color: var(--accent-color-light-brown-60);
+}
+
+/* SITE HEADER */
+.site-header-hero-wrapper{
+    background-color: var(--light-brown);
+    background-image: url(../img/header-bg.jpg);
+}
+.site-header {
+    padding-top: 40px;
+    padding-bottom: 40px;
+}
+.site-header-container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding-right: 50px;
+    padding-left: 50px;
+}
+.site-header-logo-link {
+    flex-shrink: 0;
+    display: flex;
+}
+.site-header-logo-link:hover{
+    opacity: 0.8;
+}
+.site-header-logo-link:active{
+    opacity: 0.6;
+}
+.site-header-logo-img{
+    width: 235px;
+    height: 24px;
+    object-fit: contain;
+}
+.sitenav-list {
+    display: flex;
+    align-items: center;
+}
+.sitenav-item:not(:last-child) {
+    margin-right: 40px;
+}
+.sitenav-link {
+    color: var(--text-color);
+    font-size: 12px;
+    line-height: 14px;
+    font-weight: 700;
+    letter-spacing: 1px;
+    text-transform: uppercase;
+    border-bottom:2px solid transparent ;
+    transition: all 0.3s ease;
+    white-space: nowrap; /* ekran kichrayganda yozuv tagma-tag tushmaslik uchun*/
+}
+.sitenav-link:hover{
+    border-bottom: 2px solid var(--accent-color-green);
+    color: var(--accent-color-green);
+}
+.sitenav-link:active{
+    opacity: 0.6;
+}
+
+/* HERO CONTAINER */
+.hero-container {
+    display: flex;
+    padding-left: 0;
+    padding-right: 0;
+}
+.hero-info {
+    width: 100%;
+    max-width: 730px;
+    padding-top: 116px;
+    padding-bottom: 100px;
+    padding-left: 150px;
+    padding-right: 116px;
+}
+.hero-info-heading {
+    margin-top: 0;
+    margin-bottom: 24px;
+    font-size: 64px;
+    line-height: 75px;
+    font-weight: 700;
+    color: #000;
+}
+.hero-info-text {
+    margin: 0;
+    margin-bottom: 34px;
+    font-size: 16px;
+    line-height: 1.5;
+}
+.hero-info-text:not(:last-child){
+    margin-bottom: 34px;
+}
+.hero-img {
+    width: 710px;
+    height: 596px;
+    object-fit: cover;
+}
+.hero-index-img{
+    height: 696px;
+}
+
+
+
+/* RETINA */
+@media
+only screen and (-webkit-min-device-pixel-ratio: 2),
+only screen and (   min--moz-device-pixel-ratio: 2),
+only screen and (     -o-min-device-pixel-ratio: 2/1),
+only screen and (        min-device-pixel-ratio: 2),
+only screen and (                min-resolution: 192dpi),
+only screen and (                min-resolution: 2dppx) {
+
+    .site-header-hero-wrapper{
+        background-image: url(../img/header-bg@2x.jpg);
+    }
+
 }
