--- a/css/style.css
+++ b/css/style.css
@@ -226,10 +226,14 @@ img{
 }
 
 /* INDEX-COLLECTION */
+.index-collection{
+    margin-bottom: 20px;
+}
 .index-collection-inner{
     padding: 50px 145px;
     background-color: var(--light-green-bg);
     background-image: url(../img/index-collection-bg.jpg);
+    background-repeat: no-repeat;
 }
 .index-collection-heading {
     margin-bottom: 80px;
@@ -282,6 +286,68 @@ img{
     padding-right: 117px;
 }
 
+/* INDEX FEATURES */
+.index-features {
+    margin-bottom: 30px;
+}
+.index-features-inner {
+    padding: 50px 30px;
+    background-image: url(../img/index-features-bg.jpg);
+    background-repeat: no-repeat;
+}
+.index-features-heading {
+    margin-bottom: 10px;
+    font-size: 50px;
+    line-height: normal;
+    color: #fff;
+    text-align: center;
+    text-transform: uppercase;
+}
+.index-features-lead {
+    max-width: 580px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 80px;
+    opacity: 0.8;
+    font-size: 16px;
+    line-height: 28px;
+    font-weight: 400;
+    color: #fff;
+    text-align: center;
+}
+.index-features-list {
+    display: flex;
+    flex-wrap: wrap;
+    margin-left: -20px;
+}
+.index-features-item {
+    width: calc(100% / 3 - 20px);
+    max-width: 433px;
+    margin-left: 20px;
+    margin-bottom: 30px;
+}
+.index-features-img {
+    max-width: 100%;
+    width: 433px;
+    margin-bottom: 28px;
+    height: 500px;
+    object-fit: cover;
+}
+.index-features-item-heading {
+    margin-bottom: 10px;
+    font-size: 30px;
+    line-height: 35px;
+    font-weight: 500;
+    color: var(--text-color);
+    text-transform: uppercase;
+}
+.index-features-item-text {
+    font-size: 18px;
+    line-height: 28px;
+    font-weight: 400;
+    color: var(--text-color);
+}
+
 
 
 /* RETINA */
@@ -298,6 +364,9 @@ only screen and (                min-resolution: 2dppx) {
     }
     .index-collection {
         background-image: url(../img/index-collection-bg@2x.jpg);
+    }
+    .index-features-inner{
+        background-image: url(../img/index-features-bg@2x.jpg);
     }
 
 }
